--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,12 @@
-/* You can add global styles to this file, and also import other style files */
+@use "tailwindcss" as *;
+
+* {
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none; /* IE 10+ */
+  }
+
+html {
+  background-color: #100820 !important;
+  min-height: 100%;
+  height: 100%;
+}
