--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -26,13 +26,20 @@
 }
 
 @keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
-.success { color: green; }
-.error { color: red; }
-
+.success {
+  color: green;
+}
+.error {
+  color: red;
+}
 
 :root {
   --font-serif: "Playfair Display", serif;
@@ -3836,5 +3843,23 @@ button:hover {
         width: 100%;
       }
     }
+  }
+}
+
+.spinner-small {
+  width: 18px;
+  height: 18px;
+  border: 2px solid #00000020;
+  border-top: 2px solid #000000;
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
   }
 }
